# android-tools-tauri

./: .gitignore  ADB放置说明.txt  LICENSE  README.md  build.bat  readme.txt
android-tools/: $null  Cargo.toml  convert_icon.ps1  create_android_icon.ps1  create_icon.ps1  create_icon2.ps1  tauri.conf.json
android-tools/icons/: makeico.ps1
android-tools/src/: lib.rs  main.rs
src/: index-new.html  index.html
发布版本v1.0.1/: readme.txt
发布版本v1.0.2/: readme.txt
发布版本v1.1.0/: readme.txt
发布版本v1.3.1/: readme.txt
发布版本v1.4.0/: index.html  readme.txt
发布版本v1.4.1/: index.html
发布版本v1.5.0/: readme.txt
发布版本v1.5.1/: readme.txt
