[package]
name = "android-tools"
version = "1.5.0"
description = "安卓工具集 - Tauri版"
authors = ["AndroidTools"]
edition = "2021"

[lib]
name = "android_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["process"] }
